name:                resty-repl
version:             0.1.0.0
synopsis:            Publish a REPL as a REST service
-- description:         
license:             MIT
license-file:        LICENSE
author:              daniel
maintainer:          diaz_carrete@yahoo.com
category:            Network
build-type:          Simple
extra-source-files:  
      LICENSE
      README.md
      ChangeLog.md
      .travis.yml
      .gitignore
cabal-version:       2

executable resty-repl
   main-is: Main.hs 
   default-language:    Haskell2010
   build-depends:
        base            >= 4.10 && < 5,
        resty-repl

library
  exposed-modules:     
        RestyRepl
        RestyRepl.Main
        RestyRepl.API
        RestyRepl.Server
  build-depends:
        base                 >= 4.10 && < 5,
        streaming            >= 0.2.0.0 && < 0.3,
        process-streaming    >= 0.9.3.0 && < 0.10,
        servant-server       >= 0.14 && < 0.15,
        optparse-applicative >= 0.14 && < 0.15,
        containers           >= 0.5 && < 0.7,
        text                 >= 1.2 && < 1.3,
        stm                  >= 2.4 && < 2.5,
        pipes                >= 4.2 && < 4.4,
        aeson                >= 1.4 && < 1.5,
        servant              >= 0.14 && < 0.15,
        servant-server       >= 0.14 && < 0.15,
        warp                 >= 3.2 && < 3.3,
        async                >= 2.2 && < 2.3                
  hs-source-dirs:      library
  default-language:    Haskell2010

source-repository head
    type:     git
    location: https://github.com/danidiaz/resty-repl.git
